Release v2.1.1, xxx
=======================================================

  * improved truncated Gaussians in likelihoodsFromLimits (but leave as experimental feature)
  * caching weight matrix in simplified likelihoods
  * introduced reportAllSRs option
  * tiny fix in mybinder link (see https://pypi.org/project/smodels/)
  * small fixes in unit tests

Release v2.1.0, Wed 29 Sep 2021
=======================================================

  * Ability to merge databases using '+' as a delimiter
  * useSuperseded flag in getExpResults is marked as deprecated, 
    as we now just put superseded results in separate database
  * Datasets now have an 'isCombinableWith' function
  * Slightly extended output of summary printer
  * Added scan summary (summary.txt) when running over multiple files
  * Added 'expandedOutput' option to slha-printer 
  * Output for efficiency-map results now reports likelihoods L, L_max and L_SM (instead of L and chi^2)
  * The likelihood is now maximized only for positive values of the signal strength
    in the computation of L_max
  * Pythia8 version in xsecComputer updated from 8226 to 8306
  * Improved interactive plots 

  * Database extension: 
    - added new results from 5 ATLAS and 1 CMS analyses: 
      CMS-EXO-19-010 (disappearing tracks) UL,
      ATLAS-SUSY-2016-08 (displaced leptons) EM, 
      ATLAS-SUSY-2018-10 (1l+jets) UL+EM, 
      ATLAS-SUSY-2018-12 (0l+jets) UL+EM, 
      ATLAS-SUSY-2018-22 (0l+jets) UL+EM,  
      ATLAS-SUSY-2018-23 (EWino, WH) UL
    - added EM results for 
      ATLAS-SUSY-2017-03 (EWino, WZ),
      ATLAS-SUSY-2018-06 (EWino, WZ),
      ATLAS-SUSY-2018-14 (sleptons),
      CMS-SUSY-14-021 (stops)
    - created and added THSCPM10 and THSCPM11 EMs for ATLAS-SUSY-2016-32;
    - replaced some 8 TeV ATLAS conf notes with the published results
      (ATLAS-CONF-2013-007 -> ATLAS-SUSY-2013-09, ATLAS-CONF-2013-061 -> 
       ATLAS-SUSY-2013-18, ATLAS-CONF-2013-089  -> ATLAS-SUSY-2013-20)