@@ -14,10 +14,6 @@
 modelFile="smodels.share.models.mssm"
 
 _experimental = False ## turn on experimental features
-_cap_likelihoods = False ## cap the likelihoods in likelihoodFromLimits?
-# here, capping means that if an observed UL >> expected UL we "cap"
-# the observed UL such that dr == drmax
-_drmax = 0.867 # maximum ratio 2*(oUL - eUL)/(oUL + eUL) that we allow before capping or returning None ( depending on _cap_likelihoods), 0.867 corresponds to three sigmas
 
 def filetype ( filename ):
     """ obtain information about the filetype of an input file,
